--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,6 @@
 deploy.ant.properties.file=/Users/thiagosilva/Library/Application Support/NetBeans/12.3/tomcat80.properties
-j2ee.server.home=/Users/thiagosilva/Downloads/apache-tomcat-8.5.66 2
-j2ee.server.instance=tomcat80:home=/Users/thiagosilva/Downloads/apache-tomcat-8.5.66 2
+j2ee.server.home=/Users/thiagosilva/Documents/apache-tomcat-8.5.68
+j2ee.server.instance=tomcat80:home=/Users/thiagosilva/Documents/apache-tomcat-8.5.68
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
